refs #63 remove listRoles API endpoint
